# CamaroDashboardV2App

./: .gitmodules  CMakeLists.txt  CamaroDashboardV2.qmlproject  README.md  main.qml  qmlmodules  startShell.sh
content/: CMakeLists.txt  CustomSlider.qml  OilGauge.qml  Rpm_dial_195_83.qml  Screen01.ui.qml  Settings.qml  SpeedGauge.ui.qml
imports/: CMakeLists.txt
imports/CamaroDashboardV2/: CMakeLists.txt  Constants.qml  qmldir
imports/CamaroDashboardV2/designer/: plugin.metainfo
src/: AlarmEngine.cpp  AlarmEngine.h  ButtonInputWidget.h  ChartWidgetController.cpp  ChartWidgetController.h  DigitalGaugeController.cpp  DigitalGaugeController.h  DigitalInputIndicator.cpp  DigitalInputIndicator.h  GaugeController.cpp  GaugeController.h  HolleyCANDecoder.cpp  HolleyCANDecoder.h  ImageGauge.cpp  ImageGauge.h  LogWidgetController.cpp  RPMProvider.cpp  RPMProvider.h  SettingsHandler.cpp  SettingsHandler.h  XMLSettingsHandler.cpp  XMLSettingsHandler.h  canThread.cpp  canThread.h  globals.cpp  globals.h  gps.cpp  gps.h  iconController.cpp  iconController.h  import_qml_plugins.h  interactiveshell.cpp  interactiveshell.h  json.hpp  led.cpp  led.h  logWidgetController.h  main.cpp  packetProtocol.cpp  packetProtocol.h  (+5 more)
src/spdlog/include/spdlog/: common.h
